--- a/并发与锁.md
+++ b/并发与锁.md
@@ -171,3 +171,18 @@ static final int PROPAGATE = -3
 
 <img src="https://cdn.jsdelivr.net/gh/qtxsnwwb/image-hosting@master/20210823/线程池执行流程.2hgyxu2zk8s0.png" width="60%" alt="线程池执行流程" align=center />
 
+
+
+
+
+**i++ 线程安全问题**
+* i++并非线程安全
+* i++ 并非原子操作，其执行过程为读取 i 值，i 加 1，再赋值给 i。以上过程均在线程的工作内存完成，最终再刷回主内存。
+* 如果一个线程运算完还没刷到主内存，此时这个共享变量被另外一个线程从主内存读取到了，此时读到的就是脏数据
+* 这就是典型的**内存不可见**问题
+> 若给 i 加上 volatile 让内存可见是否能解决？
+> 不能。volatile 只能保证可见性，不能保证原子性。可保证其他线程修改的可见性，不能保证线程之间读取到同样的值然后相互覆盖对方值的情况。
+
+> 解决方案：
+> 1. 对 i++ 加同步锁，同时只能有一个线程执行 i++
+> 2. 使用支持原子性操作的类，如 AtomicInteger，它使用的是 CAS 算法
