--- a/计算机网络.md
+++ b/计算机网络.md
@@ -81,3 +81,133 @@
 * 第三次挥手：服务端将最后数据发送完毕后就向客户端发出连接释放报文，包含 FIN 和 ACK 标志（FIN = 1，ACK = 1）、确认号 ack = u + 1、序列号 w（w = v + 最后发送的数据量）
 * 第四次挥手：客户端收到服务端发的 FIN 报文后，向服务端发出确认报文，确认报文包含 ACK 标志（ACK = 1）、确认号 ack = w + 1、序列号 seq = u + 1
 > 客户端发出确认报文后不是立马释放 TCP 连接，而是要经过 2 MSL（最长报文段寿命的 2 倍时长）后才释放 TCP 连接。而服务端一旦收到客户端发出的确认报文就会立马释放 TCP 连接，所以服务端结束 TCP 连接的时间要比客户端早一些。
+
+
+
+**为什么 TCP 连接时是 3 次？2 次不可以吗？**
+
+```
+	因为需要考虑连接时丢包的问题，如果只握手 2 次，第二次握手时若服务端发给客户端的确认报文段丢失，此时服务端已连接成功，而客户端一直没收到确认报文，所以客户端就不知道服务端是否已准备好了，这种情况下客户端不会给服务端发数据，也会忽略服务端发过来的数据。
+	如果是三次握手，则丢包也无妨。例如若第三次握手客户端发的 ack 报文丢失，服务端在一段时间收不到确认报文，会重新进行第二次握手。
+```
+
+
+**为什么 TCP 连接的时候是 3 次，关闭却是 4 次？**
+```
+	因为只有在客户端和服务端都没有数据要发送时才能断开 TCP。而客户端发出 FIN 报文时智能保证客户端没有数据发了，服务端有没有不知道。而服务端收到客户端的 FIN 报文后只能先回复一个确认报文告诉客户端服务端已收到 FIN 报文，但服务端还有数据没发完。所以不能一次性将确认报文和 FIN 报文发给客户端，就是这里多出一次。
+```
+
+
+**为什么客户端发出第四次挥手的确认报文后要等 2 MSL 的时间才能释放 TCP 连接？**
+```
+	同样是考虑丢包问题，如果第四次挥手的报文丢失，服务端没收到确认 ack 报文就会重发第三次挥手的报文，这样报文一去一回最长时间就是 2 MSL，所以需要等这么长时间确认服务端确已收到。
+```
+
+
+**如果已建立连接，但客户端突然出现故障怎么办？**
+```
+	TCP 设有一个保活计时器。服务器每收到一次客户端请求后会复位这个计时器，时间通常是 2 小时。若 2 小时没收到客户端任何数据，服务器就会发送一个探测报文段，以后每 75 s 发一次，若连续 10 次没反应，则认为客户端出了故障，关闭连接。
+```
+
+
+
+# HTTP 和 HTTPS 的区别
+* 协议：http 运行在 TCP 之上，明文传输，客户端与服务端都无法验证对方身份；https 运行于 SSL 上，SSL运行于 TCP 之上，是添加了加密和认证机制的 http
+* 端口：http—80；https—443
+* 资源消耗：http—较少；https—由于加解密处理，会消耗更多的 CPU 和内存资源
+* 开销：http—无需证书；https—共享密钥加密和公开密钥加密并用的混合加密机制
+* 安全性：http—弱；https—由于加密机制，安全性强
+
+
+
+# 完整的 HTTP 请求过程
+1. 浏览器进行 DNS 域名解析，得到对应的 IP 地址
+2. 根据这个 IP，找到对应的服务器建立连接（三次握手）
+3. 建立 TCP 连接后发起 HTTP 请求（一个完整的 http 请求报文）
+4. 服务器响应 HTTP 请求，浏览器得到 html 代码
+5. 浏览器解析 html 代码，并请求 html 代码中的资源（如 js、css、图片等）
+6. 浏览器对页面进行渲染呈现给用户
+7. 服务器关闭 TCP 连接（四次挥手）
+
+
+
+# DNS 解析
+1. 首先会搜索浏览器自身的 DNS缓存
+2. 若浏览器自身的缓存里没有找到，那么浏览器会搜索操作系统的 DNS 缓存
+3. 若没找到则从 hosts 文件找
+4. 若 1、2、3 均未找到，浏览器会发起一个 DNS 的系统调用，就会向本地配置的首选 DNS 服务器发起域名解析请求（通过 UDP 向DNS 的 53 端口发起请求，该请求是递归的，从根域名服务器逐渐向顶层递归遍历）
+
+
+
+**三次握手过程中发生丢包怎么办？**
+*超时重传机制*
+* 若第一个包，A 发给 B 请求连接的报文（SYN）丢失，A 会周期性超时重传，直到 B 发出确认（SYN + ACK）
+* 若第二个包，B 发给 A 的确认报文（SYN + ACK）丢失，B 会周期性超时重传，直到 A 发出确认（ACK）
+* 若第三个包，A 发给 B 的确认报文（ACK）丢包
+    * A 在发送完确认报文后，A 单方面进入 ESTAB-LISHED 状态，B 还是处于 SYN-RCVD
+    * 若此时双方无数据发送，B 会周期性超时重传（SYN + ACK），直到 A 发出确认报文（ACK），此时 B 也进入了 ESTAB-LISHED
+    * 若 A 有数据发送，A 发送的是（ACK + Data），B 收到后会进入 ESTAB-LISHED，并接受数据
+    * 若 B 有数据发送，B 是发送不了的，会周期性超时重传（SYN + ACK）直到 A 的确认（ACK）B 才能发送数据
+
+
+
+# TCP 流量控制方法
+1. 停止—等待协议
+```
+	每发送完一个帧就停止发送，等待对方的确认，在收到确认后再发送下一个帧。
+```
+2. 滑动窗口机制（TCP 采用）
+```
+	在通信过程中，接收方根据自己接收缓存的大小，动态地调整发送方的发送窗口大小，即接收窗口 rwnd(接收方设置确认报文段的窗口字段来将 rwnd 通知给发送方)，发送方的发送窗口取接收窗口 rwnd 和拥塞窗口 cwnd 最小值。
+	TCP 为每个连接设有一个持续计时器，只要 TCP 连接的一方收到对方的零窗口通知，就启动持续计时器。若计时器设置的时间到期，就发送一个零窗口探测报文段。接收方收到探测报文段时给出现在的窗口值。若窗口仍然是 0，那么发送方就重新设置持续计时器。
+```
+> 后退 N 步协议（GBN）
+> 选择重传协议（SR）
+
+
+
+# TCP 实现可靠传输的机制
+* TCP 的发送方在规定时间（重传时间）内没有收到确认就要重传已发送的报文段（超时重传）
+* TCP 采用自适应算法，动态改变重传时间 RTTs（加权平均往返时间）
+* 冗余 ACK（冗余确认）—> 快速重传
+* 每当比期望序号大的失序报文段到达时，发送一个冗余 ACK，指明下一个期待字节的序号
+> 发送方已发送 1, 2, 3, 4, 5 报文段
+> 接收方收到 1，返回给 1 的确认（确认号为 2 的第一个字节）
+> 接收方收到 3，返回给 1 的确认（确认号为 2 的第一个字节）
+> 接收方收到 4，返回给 1 的确认（确认号为 2 的第一个字节）
+> 接收方收到 5，返回给 1 的确认（确认号为 2 的第一个字节）
+> 发送方收到 **3 个对于报文段 1 的冗余 ACK** —> 认为 2 报文段丢失，重传 2 号报文段
+
+
+
+# TCP 拥塞控制四种算法
+1. 慢开始
+```
+	cwnd = 1，一个报文段，指数规律增长，直到达到 ssthresh（慢开始门限）
+```
+2. 拥塞避免
+```
+	加法增大 cwnd，直到达到网络拥塞，然后缩小到 1，重新开始慢开始，设定新的门限值为网络拥塞值 cwnd 大小的一半
+```
+3. 快重传
+```
+	cwnd 达到网络拥塞时，收到 3 个重复的确认则执行快重传算法
+```
+4. 快恢复
+```
+	当符合快重传条件时，cwnd 降到网络拥塞 cwnd 的一半，然后执行拥塞避免过程
+```
+
+
+
+# 三种路由协议比较
+
+| 协议     | RIP                                        | OSPF                                 | BGP                                    |
+| -------- | ------------------------------------------ | ------------------------------------ | -------------------------------------- |
+| 类型     | 内部                                       | 内部                                 | 外部                                   |
+| 路由算法 | 距离-向量                                  | 链路状态                             | 路径-向量                              |
+| 传递协议 | UDP                                        | IP                                   | TCP                                    |
+| 路径选择 | 跳数最少                                   | 代价最低                             | 较好，非最佳                           |
+| 交换结点 | 和本结点相邻的路由器                       | 网络中的所有路由器                   | 和本结点相邻的路由器                   |
+| 交换内容 | 当前本路由器知道的全部信息，即自己的路由表 | 与本路由器相邻的所有路由器的链路状态 | 首次：整个路由表；非首次：有变化的部分 |
+
