新增 设计模式.md

--- a/并发与锁.md
+++ b/并发与锁.md
@@ -174,8 +174,21 @@ static final int PROPAGATE = -3
 
 
 
+# volatile 关键字
+volatile 保证了**可见性**和**有序性**，但不保证操作的**原子性**
+**1. 可见性保证**
+
+* 当一条线程修改了变量的值，新值对于其他线程来说是可以立即得知的  
+
+**2. 禁止指令重排序优化（有序性）**
+
+* 具体操作：加 lock 指令，相当于一个内存屏障，重排序时不能把后面的指令重排序到内存屏障之前的位置
+* volatile 变量读操作的性能消耗与普通变量几乎无差别，但写会慢，因为需要再本地代码中插入许多内存屏障指令（lock）来保证处理器不发生乱序执行
+
+
 
 **i++ 线程安全问题**
+
 * i++并非线程安全
 * i++ 并非原子操作，其执行过程为读取 i 值，i 加 1，再赋值给 i。以上过程均在线程的工作内存完成，最终再刷回主内存。
 * 如果一个线程运算完还没刷到主内存，此时这个共享变量被另外一个线程从主内存读取到了，此时读到的就是脏数据
