--- a/设计模式.md
+++ b/设计模式.md
@@ -7,7 +7,9 @@
     2. 扩展性高，若想增加一个产品，只要扩展一个工厂类就可以了
     3. 屏蔽产品的具体实现，调用者只关心产品的接口
 * 缺点：
-    * 每次增加一个产品时，都需要增加一个具体类和对象实现工厂，使得系统中类的个数成倍增加，在一定程度上增加了系统的复杂度，同时也增加了系统具体类的依赖
+    * 每次增加一个产品时，都需要增加一个具体类和对象实现工厂，使得系统中类的个数成倍增加，在一定程度上增加了系统的复杂度，同时也增加了系统具体类的依赖  
+
+**参考：**[菜鸟教程](https://www.runoob.com/design-pattern/factory-pattern.html)
 
 
 
@@ -22,4 +24,46 @@
 * 缺点：
     * 没有接口，不能继承，与单一职责原则冲突，一个类应该只关心内部逻辑，而不关心外面如何实例化
 * 注意：
-    * getInstance() 方法中需要使用同步锁 Synchronized 防止多线程同时进入造成 instance 多次实例化
+    * getInstance() 方法中需要使用同步锁 Synchronized 防止多线程同时进入造成 instance 多次实例化  
+
+**参考：**[菜鸟教程](https://www.runoob.com/design-pattern/singleton-pattern.html)
+
+
+
+# 适配器模式
+* 意图：将一个类的接口转换成客户希望的另一个接口。适配器模式使得原本由于接口不兼容而不能一起工作的那些类可以一起工作
+* 何时使用：
+    1. 系统需要使用现有的类，而此类接口不符合系统需要
+    2. 想要建立一个可以重复使用的类，用于与一些彼此没有太大关联的类一起工作
+    3. 通过接口转换，将一个类插入另一个类系中
+* 关键代码：适配器继承或依赖已有的对象，实现想要的目标接口
+* 优点：
+    1. 可以让任何两个没有关联的类一起运行
+    2. 提高了类的复用
+    3. 增加了类的透明度
+    4. 灵活性好
+* 缺点：
+    1. 过多地使用适配器，会让系统很凌乱，不易整体进行把握
+    2. 由于 Java 至多继承一个类，所以至多只能适配一个适配器类，而且目标类须是抽象类  
+
+**参考：**[菜鸟教程](https://www.runoob.com/design-pattern/adapter-pattern.html)
+
+
+
+# 代理模式
+* 意图：为其他对象提供一种代理以控制对这个对象的访问
+* 主要解决：直接访问会给使用者或者系统结构带来很多麻烦，我们可以在访问此对象时加上一个对此对象的访问层
+* 何时使用：想在访问一个类时做一些控制
+* 如何解决：增加中间层
+* 关键代码：实现与被代理类组合
+* 优点：
+    1. 职责清晰
+    2. 高扩展性
+    3. 智能化
+* 缺点：
+    1. 由于在客户端和真实主题之间增加了代理对象，因此有些类型的代理模式可能会造成请求的处理速度变慢
+    2. 实现需要额外的工作，有些实现非常复杂
+* 和适配器模式的区别：适配器模式主要改变所考虑对象的接口，而代理模式不能改变所代理类的接口
+
+**参考：**[菜鸟教程](https://www.runoob.com/design-pattern/proxy-pattern.html)
+
